# -

./: .gitignore  GITHUB_UPLOAD.md  README.md  _pdf_extract.txt  md.md  自行记录cursor你别管.md
Desktop/: NovaJoy-取货端.sh  NovaJoy-启动后端.sh  NovaJoy-大模型控车.sh  NovaJoy-语音导览导航.sh  NovaJoy-车载屏.sh  NovaJoy-送货端.sh  restart_nav_only.sh  slam_mapping.sh  start_multi_map.sh  start_multi_map9.sh
Desktop/UI/UI/: .env.example  README.md  main.py  requirements.txt  run_courier_client.sh  run_user_client.sh  送货状态机.txt
Desktop/UI/UI/backend/: __init__.py  database.py  main.py  master_mode.py  master_takeover.py  mqtt_robot_bridge.py  placeholder_requests.py  state_machine.py  task_manager.py  tour_manager.py  tour_phases.py  user_module.py  vehicle_rooms.py  voice_ptt.py
Desktop/UI/UI/car_ui/: car_ui.py
Desktop/UI/UI/courier_client/: __init__.py  api.py  buildozer.spec  fonts_kivy.py  main.py  status_labels.py
Desktop/UI/UI/docs/: P1a-验收步骤.md  P1b-验收步骤.md  P1c-验收步骤.md  保安总控巡逻模式计划.md  集成提示词-取货Web端.md
Desktop/UI/UI/frontend/: onboard.html  pickup.html  readme.md  user_app.html  user_app.js
Desktop/UI/UI/novajoy_ui/: DESIGN_SYSTEM.md  __init__.py  brand.py  components.py  mobile.py  theme.py  widgets.py
Desktop/UI/UI/onboard_client/: __init__.py  fonts_kivy.py  main.py  onboard_state.py  panels.py  tour_state_machine.py  widgets.py
Desktop/UI/UI/scripts/: build_mobile_apk_wsl.sh  download_fonts.py  prefetch_p4a_packages.sh  ui_env.sh  (+5 more)
Desktop/map/map/: my_map.pgm  my_map.yaml  my_map2.pgm  my_map2.yaml  my_map3.pgm  my_map3.yaml  my_map4.pgm  my_map4.yaml
Desktop/map/patrol_out/: manifest.json
Desktop/map/patrol_planner/: README.md  generate_patrol.py  patrol_core.py  patrol_runner.py  patrol_ui.py  switcher_config.py  启动巡逻规划UI.bat
Desktop/ros_ws/: .gitignore  car_cmd.sh  car_cmd_daemon.py  cmd.txt  usb.desc  usb_auto_setup.sh
Desktop/ros_ws/knowledge/: rooms.json
Desktop/ros_ws/person_detect_rknn/: infer_rk3588_yolo11.py  person_detect_window.py  setup_rknn_convert_env.ps1  setup_rknn_wsl_ubuntu.sh
Desktop/ros_ws/scripts/: ai_car_chassis_term.sh  ai_car_common.sh  ai_car_nav_term.sh  ai_car_voice_nav_term.sh  install_ai_car.sh  install_llm_intent_board.py  install_voice_car.sh  install_voice_nav.sh  install_wake_kws_model.sh  onboard_api.env.example  onboard_api_base.sh  open_onboard_web.sh  publish_initial_pose_once.sh  publish_nav_initial_pose.py  run_ai_car_all.sh  run_voice_nav_all.sh  run_voice_nav_optimized.sh  smart_switcher_log.sh  start_ai_car.sh  start_camera_depth.sh  start_camera_rgb.sh  start_dual_camera.sh  start_nav.sh  start_nav_stack_light.sh  start_patrol_security.sh  start_tour_integrated.sh  start_voice_car.sh  start_voice_nav_oneclick.sh  test_llm_intent_fastpath.py  test_sherpa_tts.py  view_depth.py  view_depth.sh  voice_nav_cloud.sh  voice_nav_env.sh  voice_nav_text.py  voice_to_nav_agent.py
Desktop/ros_ws/scripts.5/: ai_car_chat_term.sh  ai_car_common.sh  ai_car_llm_server_term.sh  ai_car_microros_term.sh  ai_car_sudo_askpass.sh  ai_car_voice_term.sh  board_sync_llm_patch.sh  bootstrap_ai_car_all.sh  bootstrap_voice_car_board.sh  build_voice_audio_cache.py  check_voice_nav_startup.py  deploy_ai_car.sh  diag_cloud_auth.py  fix_scripts_crlf.sh  generate_wake_keywords.py  one_shot_voice_car.sh  publish_initial_pose_once.py  publish_initial_pose_once.sh  ros_env.sh  run_voice_car_all.sh  run_voice_nav_all.sh  start_camera.sh  start_depth_nav_assist.sh  start_dual_camera_help.sh  start_nav.sh  start_nav_stack_light.sh  start_voice_nav_oneclick.sh  test_cloud_llm.py  test_stt_merge.py  voice_car_chassis_term.sh  voice_car_common.sh  voice_car_microros_term.sh  voice_nav_audio.sh  voice_nav_cloud.sh  voice_nav_env.sh  voice_to_ai_car.py  voice_to_llm.py  voice_to_nav_agent.py
Desktop/ros_ws/src/chassis_controller/: CMakeLists.txt  package.xml
Desktop/ros_ws/src/chassis_controller/config/: chassis_controller.yaml
Desktop/ros_ws/src/chassis_controller/launch/: chassis_controller.launch.py
Desktop/ros_ws/src/chassis_controller/src/: goal_stop_publisher.cpp  imu_to_tf.cpp  keyboard_teleop.cpp  obstacle_avoidance.cpp  odom_fusion.cpp  odometry_subscriber.cpp  odometry_to_tf.cpp
Desktop/ros_ws/src/depth_nav_assist/: CMakeLists.txt  package.xml
Desktop/ros_ws/src/depth_nav_assist/config/: depth_to_scan.yaml
Desktop/ros_ws/src/depth_nav_assist/launch/: depth_nav_assist.launch.py
Desktop/ros_ws/src/patrol_security/: package.xml  setup.cfg  setup.py
Desktop/ros_ws/src/patrol_security/patrol_security/: mjpeg_server.py  mqtt_helper.py  patrol_track_assist_node.py  patrol_vision_node.py  person_selector.py  tracker_control.py
Desktop/ros_ws/src/rt_robot_nav2/: CMakeLists.txt  package.xml
Desktop/ros_ws/src/rt_robot_nav2/config/: velocity_limits.yaml
Desktop/ros_ws/src/rt_robot_nav2/launch/: bringup_launch.py  localization_launch.py  navigation_launch.py  rt_robot_nav2_complete.launch.py  save_map.launch.py
Desktop/ros_ws/src/rt_robot_nav2/map/: .gitkeep  my_map6.yaml  my_map7.yaml  my_map8.pgm  my_map8.yaml
Desktop/ros_ws/src/rt_robot_nav2/param/: navigate_w_replanning_time.xml  rt_robot_params.yaml
Desktop/ros_ws/src/rt_robot_nav2/rviz/: rt_robot_nav2.rviz
Desktop/ros_ws/src/rt_robot_nav2/scripts/: auto_initialpose.py  save_initialpose_to_map.py  verify_localization.py
Desktop/ros_ws/voice_nav/: __init__.py  agent.py  audio_capture.py  audio_io.py  backend_router.py  cloud_intent.py  env_util.py  input_trigger.py  llm_intent.py  mission_state.py  motion_bridge.py  nav_bridge.py  net_probe.py  session.py  stt_filter.py  tour_api_client.py  tour_coordinator.py  tts.py  wake.py
Desktop/ros_ws/voice_nav.5/: agent.py  audio_cache.py  audio_capture.py  audio_preprocess.py  cache_tts.py  cloud_intent.py  input_trigger.py  kb_qa.py  loader.py  nav_bridge.py  nav_guard.py  retriever.py  startup_check.py
Desktop/yolo11/: app.py  infer_rk3588_yolo11.py  infer_rk3588_yolo11_cam.py  metadata.yaml  start_multi_map.txt  start_uvc_detect.sh
Desktop/yolo11/templates/: index.html
【批量下载】my_map6等/6.30新建地图/: my_map6.yaml  my_map7.pgm  my_map7.yaml
(+79 files in other folders)
