<?xml version="1.0"?>
<package format="3">
  <name>patrol_security</name>
  <version>0.1.0</version>
  <description>P1c patrol vision and track assist nodes</description>
  <maintainer email="rock@todo.todo">rock</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
