<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rt_robot_nav2</name>
  <version>0.1.0</version>
  <description>ROS2 Navigation2 package for RT Robot, integrated with slam_gmapping and chassis_controller</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav2_bringup</depend>
  <depend>nav2_common</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_recoveries</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>nav2_lifecycle_manager</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>robot_urdf</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

